--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
-    --primary: #18a2d9;
-    --secondary: #00ffa3;
-    /*--ternary: #12C8B6;*/
+    --primary: #00b1ff;
+    --secondary: #0049b0;
+    /*--ternary: #1abaff;*/
 }
 
 @tailwind base;
@@ -42,9 +42,9 @@ input[type=number] {
 
 .loader {
     border: 10px solid transparent;
-    border-top: 10px solid #18a2d9;
-    border-bottom: 10px solid #18a2d9;
-    border-radius: 50%;
+    border-top: 10px solid #00b1ff;
+    border-bottom: 10px solid #00b1ff;
+    border-radius: 15%;
     width: 50px;
     height: 50px;
     animation: spin 1s linear infinite;
